// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contest > 2023_ccpc_final 5`] = `
ResolverOperation {
  "afterTeamProblemStatistics": TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 19,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": true,
    "lastSubmitTimestamp": 17520,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(239, 217, 9, 0.7)",
        "color": "#000",
      },
      "id": "4",
      "label": "E",
      "memoryLimit": undefined,
      "name": "",
      "statistics": {
        "acceptedNum": 252,
        "pendingNum": 0,
        "rejectedNum": 139,
        "submittedNum": 396,
      },
      "timeLimit": undefined,
    },
    "solvedTimestamp": 0,
    "submissions": [
      Submission {
        "id": "554",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6000,
      },
      Submission {
        "id": "560",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6180,
      },
      Submission {
        "id": "573",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6300,
      },
      Submission {
        "id": "577",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6360,
      },
      Submission {
        "id": "697",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7740,
      },
      Submission {
        "id": "700",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7740,
      },
      Submission {
        "id": "709",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7920,
      },
      Submission {
        "id": "711",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7920,
      },
      Submission {
        "id": "780",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 8700,
      },
      Submission {
        "id": "884",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 10260,
      },
      Submission {
        "id": "886",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 10260,
      },
      Submission {
        "id": "952",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 11340,
      },
      Submission {
        "id": "953",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 11340,
      },
      Submission {
        "id": "1017",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 12180,
      },
      Submission {
        "id": "1031",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 12420,
      },
      Submission {
        "id": "1235",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 15120,
      },
      Submission {
        "id": "1328",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 16020,
      },
      Submission {
        "id": "1404",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 16500,
      },
      Submission {
        "id": "1649",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 17520,
      },
    ],
    "totalCount": 19,
  },
  "beforeTeamProblemStatistics": TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 15,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": true,
    "lastSubmitTimestamp": 17520,
    "pendingCount": 4,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(239, 217, 9, 0.7)",
        "color": "#000",
      },
      "id": "4",
      "label": "E",
      "memoryLimit": undefined,
      "name": "",
      "statistics": {
        "acceptedNum": 252,
        "pendingNum": 0,
        "rejectedNum": 139,
        "submittedNum": 396,
      },
      "timeLimit": undefined,
    },
    "solvedTimestamp": 0,
    "submissions": [
      Submission {
        "id": "554",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6000,
      },
      Submission {
        "id": "560",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6180,
      },
      Submission {
        "id": "573",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6300,
      },
      Submission {
        "id": "577",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 6360,
      },
      Submission {
        "id": "697",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7740,
      },
      Submission {
        "id": "700",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7740,
      },
      Submission {
        "id": "709",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7920,
      },
      Submission {
        "id": "711",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 7920,
      },
      Submission {
        "id": "780",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 8700,
      },
      Submission {
        "id": "884",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 10260,
      },
      Submission {
        "id": "886",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 10260,
      },
      Submission {
        "id": "952",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 11340,
      },
      Submission {
        "id": "953",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 11340,
      },
      Submission {
        "id": "1017",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 12180,
      },
      Submission {
        "id": "1031",
        "isIgnore": false,
        "problemId": "4",
        "status": "REJECTED",
        "teamId": "3000202305140132",
        "timestamp": 12420,
      },
    ],
    "totalCount": 19,
  },
  "id": 0,
  "problemIx": 4,
  "team": Team {
    "coach": undefined,
    "group": [],
    "id": "3000202305140132",
    "members": [
      "柴榕杉",
      "罗香雨",
      "邹卓雅",
    ],
    "name": "红旗精英",
    "organization": "一汽红旗",
    "penalty": 0,
    "problemStatistics": [
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(189, 14, 14, 0.7)",
            "color": "#fff",
          },
          "id": "0",
          "label": "A",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 49,
            "pendingNum": 0,
            "rejectedNum": 239,
            "submittedNum": 288,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "#951FD9",
            "color": "#fff",
          },
          "id": "1",
          "label": "B",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 5,
            "pendingNum": 0,
            "rejectedNum": 16,
            "submittedNum": 21,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(255, 255, 255, 0.7)",
            "color": "#000",
          },
          "id": "2",
          "label": "C",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 186,
            "pendingNum": 0,
            "rejectedNum": 240,
            "submittedNum": 429,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(38, 185, 60, 0.7)",
            "color": "#fff",
          },
          "id": "3",
          "label": "D",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 2,
            "pendingNum": 0,
            "rejectedNum": 2,
            "submittedNum": 4,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 15,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": true,
        "lastSubmitTimestamp": 17520,
        "pendingCount": 4,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(239, 217, 9, 0.7)",
            "color": "#000",
          },
          "id": "4",
          "label": "E",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 252,
            "pendingNum": 0,
            "rejectedNum": 139,
            "submittedNum": 396,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [
          Submission {
            "id": "554",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 6000,
          },
          Submission {
            "id": "560",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 6180,
          },
          Submission {
            "id": "573",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 6300,
          },
          Submission {
            "id": "577",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 6360,
          },
          Submission {
            "id": "697",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 7740,
          },
          Submission {
            "id": "700",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 7740,
          },
          Submission {
            "id": "709",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 7920,
          },
          Submission {
            "id": "711",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 7920,
          },
          Submission {
            "id": "780",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 8700,
          },
          Submission {
            "id": "884",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 10260,
          },
          Submission {
            "id": "886",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 10260,
          },
          Submission {
            "id": "952",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 11340,
          },
          Submission {
            "id": "953",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 11340,
          },
          Submission {
            "id": "1017",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 12180,
          },
          Submission {
            "id": "1031",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 12420,
          },
        ],
        "totalCount": 19,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(243, 88, 20, 0.7)",
            "color": "#fff",
          },
          "id": "5",
          "label": "F",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 244,
            "pendingNum": 0,
            "rejectedNum": 280,
            "submittedNum": 530,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(12, 76, 138, 0.7)",
            "color": "#fff",
          },
          "id": "6",
          "label": "G",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 0,
            "pendingNum": 0,
            "rejectedNum": 2,
            "submittedNum": 2,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(156, 155, 155, 0.7)",
            "color": "#fff",
          },
          "id": "7",
          "label": "H",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 11,
            "pendingNum": 0,
            "rejectedNum": 51,
            "submittedNum": 62,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(4, 154, 115, 0.7)",
            "color": "#fff",
          },
          "id": "8",
          "label": "I",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 3,
            "pendingNum": 0,
            "rejectedNum": 16,
            "submittedNum": 19,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(159, 19, 236, 0.7)",
            "color": "#fff",
          },
          "id": "9",
          "label": "J",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 207,
            "pendingNum": 0,
            "rejectedNum": 577,
            "submittedNum": 790,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(42, 197, 202, 0.7)",
            "color": "#000",
          },
          "id": "10",
          "label": "K",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 2,
            "pendingNum": 0,
            "rejectedNum": 10,
            "submittedNum": 12,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(142, 56, 54, 0.7)",
            "color": "#fff",
          },
          "id": "11",
          "label": "L",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 73,
            "pendingNum": 0,
            "rejectedNum": 396,
            "submittedNum": 482,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(0, 0, 0, 0.7)",
            "color": "#fff",
          },
          "id": "12",
          "label": "M",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 10,
            "pendingNum": 0,
            "rejectedNum": 25,
            "submittedNum": 35,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
    ],
    "problemStatisticsMap": Map {
      "0" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(189, 14, 14, 0.7)",
            "color": "#fff",
          },
          "id": "0",
          "label": "A",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 49,
            "pendingNum": 0,
            "rejectedNum": 239,
            "submittedNum": 288,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "1" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "#951FD9",
            "color": "#fff",
          },
          "id": "1",
          "label": "B",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 5,
            "pendingNum": 0,
            "rejectedNum": 16,
            "submittedNum": 21,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "2" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(255, 255, 255, 0.7)",
            "color": "#000",
          },
          "id": "2",
          "label": "C",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 186,
            "pendingNum": 0,
            "rejectedNum": 240,
            "submittedNum": 429,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "3" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(38, 185, 60, 0.7)",
            "color": "#fff",
          },
          "id": "3",
          "label": "D",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 2,
            "pendingNum": 0,
            "rejectedNum": 2,
            "submittedNum": 4,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "4" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 15,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": true,
        "lastSubmitTimestamp": 17520,
        "pendingCount": 4,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(239, 217, 9, 0.7)",
            "color": "#000",
          },
          "id": "4",
          "label": "E",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 252,
            "pendingNum": 0,
            "rejectedNum": 139,
            "submittedNum": 396,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [
          Submission {
            "id": "554",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 6000,
          },
          Submission {
            "id": "560",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 6180,
          },
          Submission {
            "id": "573",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 6300,
          },
          Submission {
            "id": "577",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 6360,
          },
          Submission {
            "id": "697",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 7740,
          },
          Submission {
            "id": "700",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 7740,
          },
          Submission {
            "id": "709",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 7920,
          },
          Submission {
            "id": "711",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 7920,
          },
          Submission {
            "id": "780",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 8700,
          },
          Submission {
            "id": "884",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 10260,
          },
          Submission {
            "id": "886",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 10260,
          },
          Submission {
            "id": "952",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 11340,
          },
          Submission {
            "id": "953",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 11340,
          },
          Submission {
            "id": "1017",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 12180,
          },
          Submission {
            "id": "1031",
            "isIgnore": false,
            "problemId": "4",
            "status": "REJECTED",
            "teamId": "3000202305140132",
            "timestamp": 12420,
          },
        ],
        "totalCount": 19,
      },
      "5" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(243, 88, 20, 0.7)",
            "color": "#fff",
          },
          "id": "5",
          "label": "F",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 244,
            "pendingNum": 0,
            "rejectedNum": 280,
            "submittedNum": 530,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "6" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(12, 76, 138, 0.7)",
            "color": "#fff",
          },
          "id": "6",
          "label": "G",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 0,
            "pendingNum": 0,
            "rejectedNum": 2,
            "submittedNum": 2,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "7" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(156, 155, 155, 0.7)",
            "color": "#fff",
          },
          "id": "7",
          "label": "H",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 11,
            "pendingNum": 0,
            "rejectedNum": 51,
            "submittedNum": 62,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "8" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(4, 154, 115, 0.7)",
            "color": "#fff",
          },
          "id": "8",
          "label": "I",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 3,
            "pendingNum": 0,
            "rejectedNum": 16,
            "submittedNum": 19,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "9" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(159, 19, 236, 0.7)",
            "color": "#fff",
          },
          "id": "9",
          "label": "J",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 207,
            "pendingNum": 0,
            "rejectedNum": 577,
            "submittedNum": 790,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "10" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(42, 197, 202, 0.7)",
            "color": "#000",
          },
          "id": "10",
          "label": "K",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 2,
            "pendingNum": 0,
            "rejectedNum": 10,
            "submittedNum": 12,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "11" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(142, 56, 54, 0.7)",
            "color": "#fff",
          },
          "id": "11",
          "label": "L",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 73,
            "pendingNum": 0,
            "rejectedNum": 396,
            "submittedNum": 482,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "12" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(0, 0, 0, 0.7)",
            "color": "#fff",
          },
          "id": "12",
          "label": "M",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 10,
            "pendingNum": 0,
            "rejectedNum": 25,
            "submittedNum": 35,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
    },
    "rank": 132,
    "solvedProblemNum": 0,
    "tag": [],
  },
}
`;

exports[`contest > 2023_ccpc_final 12`] = `
ResolverOperation {
  "afterTeamProblemStatistics": TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 1,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": true,
    "isSubmitted": true,
    "lastSubmitTimestamp": 17460,
    "pendingCount": 0,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(4, 154, 115, 0.7)",
        "color": "#fff",
      },
      "id": "8",
      "label": "I",
      "memoryLimit": undefined,
      "name": "",
      "statistics": {
        "acceptedNum": 3,
        "pendingNum": 0,
        "rejectedNum": 16,
        "submittedNum": 19,
      },
      "timeLimit": undefined,
    },
    "solvedTimestamp": 17460,
    "submissions": [
      Submission {
        "id": "1608",
        "isIgnore": false,
        "problemId": "8",
        "status": "REJECTED",
        "teamId": "3000202305140047",
        "timestamp": 17400,
      },
      Submission {
        "id": "1632",
        "isIgnore": false,
        "problemId": "8",
        "status": "CORRECT",
        "teamId": "3000202305140047",
        "timestamp": 17460,
      },
    ],
    "totalCount": 2,
  },
  "beforeTeamProblemStatistics": TeamProblemStatistics {
    "contestPenalty": 1200,
    "failedCount": 0,
    "ignoreCount": 0,
    "isFirstSolved": false,
    "isSolved": false,
    "isSubmitted": false,
    "lastSubmitTimestamp": 17460,
    "pendingCount": 2,
    "problem": Problem {
      "balloonColor": {
        "background_color": "rgba(4, 154, 115, 0.7)",
        "color": "#fff",
      },
      "id": "8",
      "label": "I",
      "memoryLimit": undefined,
      "name": "",
      "statistics": {
        "acceptedNum": 3,
        "pendingNum": 0,
        "rejectedNum": 16,
        "submittedNum": 19,
      },
      "timeLimit": undefined,
    },
    "solvedTimestamp": 0,
    "submissions": [],
    "totalCount": 2,
  },
  "id": 202,
  "problemIx": 8,
  "team": Team {
    "coach": undefined,
    "group": [],
    "id": "3000202305140047",
    "members": [
      "王展鹏",
      "罗煜翔",
      "蒋凌宇",
    ],
    "name": "重生之我是菜狗",
    "organization": "北京大学",
    "penalty": 71160,
    "problemStatistics": [
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 960,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(189, 14, 14, 0.7)",
            "color": "#fff",
          },
          "id": "0",
          "label": "A",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 49,
            "pendingNum": 0,
            "rejectedNum": 239,
            "submittedNum": 288,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 960,
        "submissions": [
          Submission {
            "id": "98",
            "isIgnore": false,
            "problemId": "0",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 960,
          },
        ],
        "totalCount": 1,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 2,
        "ignoreCount": 0,
        "isFirstSolved": true,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 10920,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "#951FD9",
            "color": "#fff",
          },
          "id": "1",
          "label": "B",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 5,
            "pendingNum": 0,
            "rejectedNum": 16,
            "submittedNum": 21,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 10920,
        "submissions": [
          Submission {
            "id": "877",
            "isIgnore": false,
            "problemId": "1",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 10020,
          },
          Submission {
            "id": "890",
            "isIgnore": false,
            "problemId": "1",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 10320,
          },
          Submission {
            "id": "920",
            "isIgnore": false,
            "problemId": "1",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 10920,
          },
        ],
        "totalCount": 3,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 4800,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(255, 255, 255, 0.7)",
            "color": "#000",
          },
          "id": "2",
          "label": "C",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 186,
            "pendingNum": 0,
            "rejectedNum": 240,
            "submittedNum": 429,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 4800,
        "submissions": [
          Submission {
            "id": "438",
            "isIgnore": false,
            "problemId": "2",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 4800,
          },
        ],
        "totalCount": 1,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(38, 185, 60, 0.7)",
            "color": "#fff",
          },
          "id": "3",
          "label": "D",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 2,
            "pendingNum": 0,
            "rejectedNum": 2,
            "submittedNum": 4,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 300,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(239, 217, 9, 0.7)",
            "color": "#000",
          },
          "id": "4",
          "label": "E",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 252,
            "pendingNum": 0,
            "rejectedNum": 139,
            "submittedNum": 396,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 300,
        "submissions": [
          Submission {
            "id": "4",
            "isIgnore": false,
            "problemId": "4",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 300,
          },
        ],
        "totalCount": 1,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": true,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 1200,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(243, 88, 20, 0.7)",
            "color": "#fff",
          },
          "id": "5",
          "label": "F",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 244,
            "pendingNum": 0,
            "rejectedNum": 280,
            "submittedNum": 530,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 1200,
        "submissions": [
          Submission {
            "id": "121",
            "isIgnore": false,
            "problemId": "5",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 1200,
          },
        ],
        "totalCount": 1,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(12, 76, 138, 0.7)",
            "color": "#fff",
          },
          "id": "6",
          "label": "G",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 0,
            "pendingNum": 0,
            "rejectedNum": 2,
            "submittedNum": 2,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 1,
        "ignoreCount": 0,
        "isFirstSolved": true,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 7680,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(156, 155, 155, 0.7)",
            "color": "#fff",
          },
          "id": "7",
          "label": "H",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 11,
            "pendingNum": 0,
            "rejectedNum": 51,
            "submittedNum": 62,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 7680,
        "submissions": [
          Submission {
            "id": "669",
            "isIgnore": false,
            "problemId": "7",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 7560,
          },
          Submission {
            "id": "685",
            "isIgnore": false,
            "problemId": "7",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 7680,
          },
        ],
        "totalCount": 2,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 17460,
        "pendingCount": 2,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(4, 154, 115, 0.7)",
            "color": "#fff",
          },
          "id": "8",
          "label": "I",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 3,
            "pendingNum": 0,
            "rejectedNum": 16,
            "submittedNum": 19,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 2,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 1,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 2760,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(159, 19, 236, 0.7)",
            "color": "#fff",
          },
          "id": "9",
          "label": "J",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 207,
            "pendingNum": 0,
            "rejectedNum": 577,
            "submittedNum": 790,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 2760,
        "submissions": [
          Submission {
            "id": "213",
            "isIgnore": false,
            "problemId": "9",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 2520,
          },
          Submission {
            "id": "237",
            "isIgnore": false,
            "problemId": "9",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 2760,
          },
        ],
        "totalCount": 2,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 3,
        "ignoreCount": 0,
        "isFirstSolved": true,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 14280,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(42, 197, 202, 0.7)",
            "color": "#000",
          },
          "id": "10",
          "label": "K",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 2,
            "pendingNum": 0,
            "rejectedNum": 10,
            "submittedNum": 12,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 14280,
        "submissions": [
          Submission {
            "id": "1135",
            "isIgnore": false,
            "problemId": "10",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 13860,
          },
          Submission {
            "id": "1137",
            "isIgnore": false,
            "problemId": "10",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 13920,
          },
          Submission {
            "id": "1145",
            "isIgnore": false,
            "problemId": "10",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 14040,
          },
          Submission {
            "id": "1164",
            "isIgnore": false,
            "problemId": "10",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 14280,
          },
        ],
        "totalCount": 4,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 4,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 5760,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(142, 56, 54, 0.7)",
            "color": "#fff",
          },
          "id": "11",
          "label": "L",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 73,
            "pendingNum": 0,
            "rejectedNum": 396,
            "submittedNum": 482,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 5760,
        "submissions": [
          Submission {
            "id": "365",
            "isIgnore": false,
            "problemId": "11",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 3840,
          },
          Submission {
            "id": "386",
            "isIgnore": false,
            "problemId": "11",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 4140,
          },
          Submission {
            "id": "405",
            "isIgnore": false,
            "problemId": "11",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 4380,
          },
          Submission {
            "id": "452",
            "isIgnore": false,
            "problemId": "11",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 4860,
          },
          Submission {
            "id": "530",
            "isIgnore": false,
            "problemId": "11",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 5760,
          },
        ],
        "totalCount": 5,
      },
      TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 9300,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(0, 0, 0, 0.7)",
            "color": "#fff",
          },
          "id": "12",
          "label": "M",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 10,
            "pendingNum": 0,
            "rejectedNum": 25,
            "submittedNum": 35,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 9300,
        "submissions": [
          Submission {
            "id": "825",
            "isIgnore": false,
            "problemId": "12",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 9300,
          },
        ],
        "totalCount": 1,
      },
    ],
    "problemStatisticsMap": Map {
      "0" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 960,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(189, 14, 14, 0.7)",
            "color": "#fff",
          },
          "id": "0",
          "label": "A",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 49,
            "pendingNum": 0,
            "rejectedNum": 239,
            "submittedNum": 288,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 960,
        "submissions": [
          Submission {
            "id": "98",
            "isIgnore": false,
            "problemId": "0",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 960,
          },
        ],
        "totalCount": 1,
      },
      "1" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 2,
        "ignoreCount": 0,
        "isFirstSolved": true,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 10920,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "#951FD9",
            "color": "#fff",
          },
          "id": "1",
          "label": "B",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 5,
            "pendingNum": 0,
            "rejectedNum": 16,
            "submittedNum": 21,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 10920,
        "submissions": [
          Submission {
            "id": "877",
            "isIgnore": false,
            "problemId": "1",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 10020,
          },
          Submission {
            "id": "890",
            "isIgnore": false,
            "problemId": "1",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 10320,
          },
          Submission {
            "id": "920",
            "isIgnore": false,
            "problemId": "1",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 10920,
          },
        ],
        "totalCount": 3,
      },
      "2" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 4800,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(255, 255, 255, 0.7)",
            "color": "#000",
          },
          "id": "2",
          "label": "C",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 186,
            "pendingNum": 0,
            "rejectedNum": 240,
            "submittedNum": 429,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 4800,
        "submissions": [
          Submission {
            "id": "438",
            "isIgnore": false,
            "problemId": "2",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 4800,
          },
        ],
        "totalCount": 1,
      },
      "3" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(38, 185, 60, 0.7)",
            "color": "#fff",
          },
          "id": "3",
          "label": "D",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 2,
            "pendingNum": 0,
            "rejectedNum": 2,
            "submittedNum": 4,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "4" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 300,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(239, 217, 9, 0.7)",
            "color": "#000",
          },
          "id": "4",
          "label": "E",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 252,
            "pendingNum": 0,
            "rejectedNum": 139,
            "submittedNum": 396,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 300,
        "submissions": [
          Submission {
            "id": "4",
            "isIgnore": false,
            "problemId": "4",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 300,
          },
        ],
        "totalCount": 1,
      },
      "5" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": true,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 1200,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(243, 88, 20, 0.7)",
            "color": "#fff",
          },
          "id": "5",
          "label": "F",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 244,
            "pendingNum": 0,
            "rejectedNum": 280,
            "submittedNum": 530,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 1200,
        "submissions": [
          Submission {
            "id": "121",
            "isIgnore": false,
            "problemId": "5",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 1200,
          },
        ],
        "totalCount": 1,
      },
      "6" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 0,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(12, 76, 138, 0.7)",
            "color": "#fff",
          },
          "id": "6",
          "label": "G",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 0,
            "pendingNum": 0,
            "rejectedNum": 2,
            "submittedNum": 2,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 0,
      },
      "7" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 1,
        "ignoreCount": 0,
        "isFirstSolved": true,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 7680,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(156, 155, 155, 0.7)",
            "color": "#fff",
          },
          "id": "7",
          "label": "H",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 11,
            "pendingNum": 0,
            "rejectedNum": 51,
            "submittedNum": 62,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 7680,
        "submissions": [
          Submission {
            "id": "669",
            "isIgnore": false,
            "problemId": "7",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 7560,
          },
          Submission {
            "id": "685",
            "isIgnore": false,
            "problemId": "7",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 7680,
          },
        ],
        "totalCount": 2,
      },
      "8" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": false,
        "isSubmitted": false,
        "lastSubmitTimestamp": 17460,
        "pendingCount": 2,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(4, 154, 115, 0.7)",
            "color": "#fff",
          },
          "id": "8",
          "label": "I",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 3,
            "pendingNum": 0,
            "rejectedNum": 16,
            "submittedNum": 19,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 0,
        "submissions": [],
        "totalCount": 2,
      },
      "9" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 1,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 2760,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(159, 19, 236, 0.7)",
            "color": "#fff",
          },
          "id": "9",
          "label": "J",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 207,
            "pendingNum": 0,
            "rejectedNum": 577,
            "submittedNum": 790,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 2760,
        "submissions": [
          Submission {
            "id": "213",
            "isIgnore": false,
            "problemId": "9",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 2520,
          },
          Submission {
            "id": "237",
            "isIgnore": false,
            "problemId": "9",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 2760,
          },
        ],
        "totalCount": 2,
      },
      "10" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 3,
        "ignoreCount": 0,
        "isFirstSolved": true,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 14280,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(42, 197, 202, 0.7)",
            "color": "#000",
          },
          "id": "10",
          "label": "K",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 2,
            "pendingNum": 0,
            "rejectedNum": 10,
            "submittedNum": 12,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 14280,
        "submissions": [
          Submission {
            "id": "1135",
            "isIgnore": false,
            "problemId": "10",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 13860,
          },
          Submission {
            "id": "1137",
            "isIgnore": false,
            "problemId": "10",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 13920,
          },
          Submission {
            "id": "1145",
            "isIgnore": false,
            "problemId": "10",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 14040,
          },
          Submission {
            "id": "1164",
            "isIgnore": false,
            "problemId": "10",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 14280,
          },
        ],
        "totalCount": 4,
      },
      "11" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 4,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 5760,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(142, 56, 54, 0.7)",
            "color": "#fff",
          },
          "id": "11",
          "label": "L",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 73,
            "pendingNum": 0,
            "rejectedNum": 396,
            "submittedNum": 482,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 5760,
        "submissions": [
          Submission {
            "id": "365",
            "isIgnore": false,
            "problemId": "11",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 3840,
          },
          Submission {
            "id": "386",
            "isIgnore": false,
            "problemId": "11",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 4140,
          },
          Submission {
            "id": "405",
            "isIgnore": false,
            "problemId": "11",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 4380,
          },
          Submission {
            "id": "452",
            "isIgnore": false,
            "problemId": "11",
            "status": "REJECTED",
            "teamId": "3000202305140047",
            "timestamp": 4860,
          },
          Submission {
            "id": "530",
            "isIgnore": false,
            "problemId": "11",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 5760,
          },
        ],
        "totalCount": 5,
      },
      "12" => TeamProblemStatistics {
        "contestPenalty": 1200,
        "failedCount": 0,
        "ignoreCount": 0,
        "isFirstSolved": false,
        "isSolved": true,
        "isSubmitted": true,
        "lastSubmitTimestamp": 9300,
        "pendingCount": 0,
        "problem": Problem {
          "balloonColor": {
            "background_color": "rgba(0, 0, 0, 0.7)",
            "color": "#fff",
          },
          "id": "12",
          "label": "M",
          "memoryLimit": undefined,
          "name": "",
          "statistics": {
            "acceptedNum": 10,
            "pendingNum": 0,
            "rejectedNum": 25,
            "submittedNum": 35,
          },
          "timeLimit": undefined,
        },
        "solvedTimestamp": 9300,
        "submissions": [
          Submission {
            "id": "825",
            "isIgnore": false,
            "problemId": "12",
            "status": "CORRECT",
            "teamId": "3000202305140047",
            "timestamp": 9300,
          },
        ],
        "totalCount": 1,
      },
    },
    "rank": 1,
    "solvedProblemNum": 10,
    "tag": [],
  },
}
`;
